doc/openshift_test_server/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xgt-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: xgt-demo-jobs
---
apiVersion: v1
kind: Namespace
metadata:
  name: xgt-demo-ldap-sync
